# sample-openapi-fixed.json
@@ -175,6 +175,98 @@
         }
       }
     },
+    "/divorce-report": {
+      "post": {
+        "tags": ["Reports"],
+        "summary": "Account History Report",
+        "description": "Returns a report of member account activity condensed by profit year. Includes contributions, earnings, forfeitures, withdrawals, and ending balances for each plan year.",
+        "operationId": "getAccountHistory",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/profit-share-edit": {
+      "get": {
+        "tags": ["Reports"],
+        "summary": "Profit Share Edit",
+        "description": "Returns per member transactions based on user specified contribution/incoming forfeit/earnings parameters",
+        "operationId": "getProfitShareEdit",
+        "parameters": [
+          {
+            "name": "profitYear",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/beneficiaries-report": {
+      "get": {
+        "tags": ["Beneficiaries"],
+        "summary": "Adhoc Beneficiaries Report",
+        "description": "Returns a report of employee and non-employee beneficiaries, with optional detail lines.",
+        "operationId": "getAdhocBeneficiaries",
+        "parameters": [
+          {
+            "name": "includeDetail",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/profit-sharing-update": {
+      "get": {
+        "tags": ["Reports"],
+        "summary": "Profit Sharing Update",
+        "description": "Updates plan members based on points provided.",
+        "operationId": "getProfitSharingUpdate",
+        "parameters": [
+          {
+            "name": "profitYear",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/frozen/distributions-by-age": {
       "get": {
         "tags": ["Reports"],
